; ModuleID = '/home/carl/AnghaBench/lab/engine/code/client/extr_cl_console.c_Con_Close.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/client/extr_cl_console.c_Con_Close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i64, i64 }

@com_cl_running = common dso_local global %struct.TYPE_4__* null, align 8
@g_consoleField = common dso_local global i32 0, align 4
@KEYCATCH_CONSOLE = common dso_local global i32 0, align 4
@con = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Con_Close() #0 {
  %1 = load %struct.TYPE_4__*, %struct.TYPE_4__** @com_cl_running, align 8
  %2 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  br label %14

6:                                                ; preds = %0
  %7 = call i32 @Field_Clear(i32* @g_consoleField)
  %8 = call i32 (...) @Con_ClearNotify()
  %9 = call i32 (...) @Key_GetCatcher()
  %10 = load i32, i32* @KEYCATCH_CONSOLE, align 4
  %11 = xor i32 %10, -1
  %12 = and i32 %9, %11
  %13 = call i32 @Key_SetCatcher(i32 %12)
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @con, i32 0, i32 1), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @con, i32 0, i32 0), align 8
  br label %14

14:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @Field_Clear(i32*) #1

declare dso_local i32 @Con_ClearNotify(...) #1

declare dso_local i32 @Key_SetCatcher(i32) #1

declare dso_local i32 @Key_GetCatcher(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
